--- a/analyses/MoCo/analysis.yaml
+++ b/analyses/MoCo/analysis.yaml
@@ -1,6 +1,6 @@
 ---
-aliphysics-version: "vAN-20191016_ROOT6-1"
-max-input-files: 35
+aliphysics-version: "vAN-20191025_ROOT6-1"
+max-input-files: 40
 max-merge-files: 15
 ttl: "24 * 60 * 60"
 
@@ -17,10 +17,10 @@ tasks:
       "~do_kt_trueq3d_cf=true; ~do_trueqinv_cf=true;~do_kt_trueqinv_cf=true;"
       "~do_detadphistar_cf=true; ~do_avg_sep_cf=true;"
       "~q3d_bin_count=73; ~q3d_maxq=0.365/3.0; ~qinv_bin_size_MeV=2.5;"
-      "~mcwg_lednicky = true; ~mcwg_strong = false; ~mcwg_3body = false;"
+      "~mcwg_lednicky = true; ~mcwg_strong=false; ~mcwg_3body = false;"
       "~eventreader_read_full_mc=false; ~trueq3d_extra_bins = false;  $mc_pion_only=true;"
       "@is_mc_analysis = true; @num_events_to_mix = 6; @enable_pair_monitors=false;"
       "$cuts_use_attrs=true; $pion_1_rm_neg_lbl=true;"
       "$pion_1_min_tpc_chi_ndof = 0.33; $pion_1_max_tpc_chi_ndof = 1.8;"
-      "$pion_1_max_its_chi_ndof = 1.9; $pair_phi_star_radius=1.1;"
-      "$pion_1_tpctof = 0.9;"
+      "$pion_1_max_its_chi_ndof = 2.3;"
+      "$pion_1_tof_limit=1.9;"
