analyses/systematics-eta - Disable pair-cut monitors

--- a/analyses/systematics-eta/analysis.yaml
+++ b/analyses/systematics-eta/analysis.yaml
@@ -16,6 +16,7 @@ tasks:
       "~do_kt_pqq3d_cf=true; ~q3d_bin_count=43; ~q3d_maxq=0.1075;"
       "~do_detadphistar_cf=true;"
       "@num_events_to_mix = 3;"
+      "@enable_pair_monitors = false;"
       "~eventreader_dca_globaltrack = 0;"
       "$pion_1_max_impact_xy=1.5; $pion_1_max_impact_z=1.6;"
       "$pion_1_tpc_sigma=2.6;"
@@ -34,6 +35,7 @@ tasks:
       "~do_kt_pqq3d_cf=true; ~q3d_bin_count=43; ~q3d_maxq=0.1075;"
       "~do_detadphistar_cf=true;"
       "@num_events_to_mix = 3;"
+      "@enable_pair_monitors = false;"
       "~eventreader_dca_globaltrack = 0;"
       "$pion_1_max_impact_xy=1.5; $pion_1_max_impact_z=1.6;"
       "$pion_1_tpc_sigma=2.6;"
@@ -53,6 +55,7 @@ tasks:
       "~do_kt_pqq3d_cf=true; ~q3d_bin_count=43; ~q3d_maxq=0.1075;"
       "~do_detadphistar_cf=true;"
       "@num_events_to_mix = 3;"
+      "@enable_pair_monitors = false;"
       "~eventreader_dca_globaltrack = 0;"
       "$pion_1_max_impact_xy=1.5; $pion_1_max_impact_z=1.6;"
       "$pion_1_tpc_sigma=2.6;"
@@ -71,6 +74,7 @@ tasks:
       "~do_kt_pqq3d_cf=true; ~q3d_bin_count=43; ~q3d_maxq=0.1075;"
       "~do_detadphistar_cf=true;"
       "@num_events_to_mix = 3;"
+      "@enable_pair_monitors = false;"
       "~eventreader_dca_globaltrack = 0;"
       "$pion_1_max_impact_xy=1.5; $pion_1_max_impact_z=1.6;"
       "$pion_1_tpc_sigma=2.6;"
