--- a/analyses/MoCo/analysis.yaml
+++ b/analyses/MoCo/analysis.yaml
@@ -1,5 +1,5 @@
 ---
-aliphysics-version: "vAN-20191025_ROOT6-1"
+aliphysics-version: "vAN-20191123_ROOT6-1"
 max-input-files: 40
 max-merge-files: 15
 ttl: "24 * 60 * 60"
@@ -14,13 +14,14 @@ tasks:
       "MRC_container", "",
       "{0:90}; "
       "(0.2:0.3:0.4:0.5:0.6:0.7:0.8:1.0:1.2);"
-      "~do_kt_trueq3d_cf=true; ~do_trueqinv_cf=true;~do_kt_trueqinv_cf=true;"
-      "~do_detadphistar_cf=true; ~do_avg_sep_cf=true;"
-      "~q3d_bin_count=73; ~q3d_maxq=0.365/3.0; ~qinv_bin_size_MeV=2.5;"
-      "~mcwg_lednicky = true; ~mcwg_strong=false; ~mcwg_3body = false;"
-      "~eventreader_read_full_mc=false; ~trueq3d_extra_bins = false;  $mc_pion_only=true;"
-      "@is_mc_analysis = true; @num_events_to_mix = 6; @enable_pair_monitors=false;"
-      "$cuts_use_attrs=true; $pion_1_rm_neg_lbl=true;"
-      "$pion_1_min_tpc_chi_ndof = 0.33; $pion_1_max_tpc_chi_ndof = 1.8;"
-      "$pion_1_max_its_chi_ndof = 2.3;"
-      "$pion_1_tof_limit=1.9;"
+      "~do_kt_trueq3d_cf=true; ~do_trueqinv_cf=true; ~do_kt_trueqinv_cf=true;"
+      "~do_detadphistar_cf=true; ~do_avg_sep_cf=false;"
+      "~q3d_bin_count=73; ~q3d_maxq=0.365/3.0; ~qinv_bin_size_MeV=1.0;"
+      "~mcwg_lednicky=false; ~mcwg_strong=false; ~mcwg_3body=false;"
+      "~eventreader_read_full_mc=false; $pion_1_rm_neg_lbl=true; $mc_pion_only=true; "
+      "@is_mc_analysis=true; @num_events_to_mix=7; @enable_pair_monitors=false;"
+      "~trueq3d_extra_bins=false; "
+      "$pion_1_min_tpc_chi_ndof=0.33; $pion_1_max_tpc_chi_ndof=1.8;"
+      "$pion_1_max_its_chi_ndof=2.3;"
+      "$pion_1_tpc_sigma=2.4; "
+      "$pion_1_tof_required=true; "
